# github-repo-scoring

./: README.md
findmyowner/: .gitignore  README.md  docker-compose.yml
findmyowner/backend/: .env.example  Dockerfile  README.md  pyproject.toml
findmyowner/backend/app/: main.py
findmyowner/backend/app/api/v1/: health.py  router.py
findmyowner/backend/app/core/: config.py
findmyowner/backend/app/db/: session.py
findmyowner/backend/findmyowner_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
findmyowner/backend/tests/: test_health.py
findmyowner/frontend/: README.md  index.html  package.json  tailwind.config.js
findmyowner/frontend/src/: App.tsx  index.css
findmyowner/frontend/src/layouts/: AppShell.tsx
findmyowner/frontend/src/pages/: AdminPage.tsx  HomePage.tsx  OwnerDashboardPage.tsx  ScanPage.tsx
findmyowner/frontend/src/routes/: AppRoutes.tsx
github-repo-scoring/: .gitignore  README.md  pyproject.toml  requirements.txt
github-repo-scoring/.github/workflows/: ci.yml
github-repo-scoring/app/: config.py  github_client.py  logger.py  main.py  models.py  repository_service.py  routes.py  schemas.py  scoring.py
github-repo-scoring/app/api/: routes.py
github-repo-scoring/app/clients/: github_client.py
github-repo-scoring/app/core/: cache.py  config.py  logger.py
github-repo-scoring/app/services/: repository_service.py  scoring.py
github-repo-scoring/tests/: test_api.py  test_config.py  test_github_client.py  test_repository_service.py  test_scoring.py
