[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "github-repo-scoring-service"
version = "0.1.0"
description = "Backend service for searching and scoring public GitHub repositories."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.116.1",
    "pydantic==2.11.7",
    "httpx==0.28.1",
    "uvicorn==0.35.0",
    "python-dotenv==1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "black==25.9.0",
    "ruff==0.13.2",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
