[project]
name = "findmyowner-backend"
version = "0.1.0"
description = "FastAPI backend for FindMyOwner"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.0",
  "fastapi>=0.115.0",
  "pydantic-settings>=2.8.0",
  "sqlalchemy>=2.0.39",
  "psycopg[binary]>=3.2.6",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "httpx>=0.28.1",
  "ruff>=0.11.2",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
